feat: Add JWT secret to .env file

--- a/Task-6/task_manager/.env
+++ b/Task-6/task_manager/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://Nahom:EeZZjnT5ii879pBL@cluster0.sothe.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=fo9wjadf20f
